--- a/TvServer.Backend/appsettings.json
+++ b/TvServer.Backend/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKey": "d3ad47df-93ed-4deb-a33e-57c39e697a36"
 }
