--- a/TvServer.WebFrontend/package.json
+++ b/TvServer.WebFrontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "fast-xml-parser": "^4.5.0",
     "immer": "^10.1.1",
     "react": "^18.3.1",
